--- a/word_analyzer/templates/index.html
+++ b/word_analyzer/templates/index.html
@@ -18,7 +18,7 @@
 
     {% if analysis %}
     <div class="result">
-      <h3>🔤😉 Word Frequencies:</h3>
+      <h3>🔤 Word Frequencies:</h3>
       <ul>
         {% for word, count in analysis.freq.items() %}
         <li>{{ word }}: {{ count }}</li>
